fluxcd/components/netpol/tor/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tor-daemon
spec:
  podSelector:
    matchExpressions:
    - key: controller
      operator: Exists
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: ${KUBE_API_CIDR}
    ports:
    - port: 6443
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
        - 100.64.0.0/10
        - 169.254.0.0/16
        - ${KUBE_API_CIDR}
    ports:
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
